bases/apps/torrents/readarr/readarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector: 
    app: readarr
  type: ClusterIP
  ports:
  - port: 8787
    targetPort: 8787
